# ktm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.cpp
.github/workflows/: auto_format_work.yml  build_test_work.yml  build_wasm_test_work.yml  cmake_ktm_action.yml  cmake_ktm_test.yml  code_format_work.yml  format_check_work.yml  ktm_build_work.yml  ktm_code_format.yml  ktm_wasm_work.yml
ChthollyEngine/Engine/: Chtholly.h  Kutori.h
ChthollyEngine/Engine/Acsi/: Acsi.h  AcsiIntrin.h  AcsiNeon.h  IntrinEx.h  NeonEx.h  SetupAcsi.h
ChthollyEngine/Engine/Basic/: Basic.h  Delegate.h  SetupBase.h  SetupBasic.h  SetupSimd.h  SingleExtend.h  Singleton.h  TraitsEx.h
ChthollyEngine/Engine/Core/: Application.cpp  Application.h  Delegate.h  MouseCode.h  Singleton.h  Window.cpp  Window.h  WindowContext.cpp  WindowContext.h
ChthollyEngine/Engine/Event/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ChthollyEngine/Engine/Input/: KeyCode.h  MouseCode.h
ChthollyEngine/Engine/Log/: Logger.cpp  Logger.h
ChthollyEngine/Engine/Math/: BaseType.h  IAdd.h  KTMTest.h  KTMath.h  KutoriMath.h  Math.h  MathTest.h  MathType.h  Matholly.h  TypeBase.h  Vec.h  XMath.h
ChthollyEngine/Engine/Render/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h
ChthollyEngine/Engine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  RendererAPI.h
ChthollyEngine/Engine/Simd/: IntrinEx.h  NeonEx.h  SetupSimd.h  Simd.h
ChthollyEngine/Engine/Util/: Config.h  Delegate.h  KSimd.h  KutoriTp.h  Singleton.h
ChthollyEngine/Platform/Mac/: EvtNSWindow.h  EvtNSWindow.mm  MacCocoaContext.h  MacCocoaContext.mm  MacWindow.h  MacWindow.mm
ChthollyEngine/Platform/Windows/: EvtWin32Window.cpp  EvtWin32Window.h  WindowsWin32Context.cpp  WindowsWin32Context.h  WindowsWindow.cpp  WindowsWindow.h
ChthollyEngine/RenderAPI/DirectX12/: DirectX12Context.cpp  DirectX12Context.h  DirectX12Renderer.cpp  DirectX12Renderer.h
ChthollyEngine/RenderAPI/Metal/: MetalBuffer.h  MetalBuffer.mm  MetalContext.h  MetalContext.mm  MetalGraphicsContext.h  MetalGraphicsContext.mm  MetalRenderer.h  MetalRenderer.mm
ChthollyEngine/RenderAPI/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanRenderer.cpp  VulkanRenderer.h
ChthollySandBox/: SandBox.cpp
Math/: KTMTest.h  KTMath.h  setup.h  type_mat.h
Math/Acsi/: AcsiIntrin.h
Math/Basic/: Basic.h  SingleExtend.h
Math/Detail/MatCommon/: MatCommon.inl  MatCommonSimd.inl
Math/Detail/Matrix/: MatOpt.inl  MatOptFwd.h  MatOptSimd.inl
Math/Detail/Quaternion/: QuatOpt.inl  QuatOptSimd.inl
Math/Detail/VecCommon/: VecCommon.inl  VecCommonSimd.inl
Math/Detail/Vector/: VecData.inl  VecDataFwd.h  VecDataSimd.inl  VecOpt.inl  VecOptSimd.inl
Math/Detail/function/: VecCommonFwd.h  common.inl  common_fwd.h  common_simd.inl  matrix.inl  matrix_simd.inl
Math/Detail/matrix/: mat_calc.inl  mat_calc_fwd.h  mat_calc_simd.inl
Math/Detail/quaternion/: quat_calc.inl  quat_calc_fwd.h  quat_calc_simd.inl
Math/Detail/vector/: vec_calc.inl  vec_calc_fwd.h  vec_calc_simd.inl  vec_data.inl  vec_data_fwd.h  vec_data_simd.inl
Math/Interface/ICommon/: IArray.h
Math/Interface/IMatrix/: IMatArray.h  IMatData.h  IMatMake.h  IMatOpt.h
Math/Interface/IQuaternion/: IQuatArray.h  IQuatData.h  IQuatMake.h  IQuatOpt.h
Math/Interface/IVector/: IVecArray.h  IVecData.h  IVecOpt.h
Math/MathType/: MatType.h  QuatType.h  VecType.h
Math/function/: ArtcCommon.h  MatCommon.h  Matrix.h  QuatCommon.h  Quaternion.h  Transform3D.h  VecCommon.h  VecGeometry.h  Vector.h  arithmetic.h  common.h  geometric.h  matrix.h  transform_3d.h
Math/interface/matrix/: imat_array.h  imat_calc.h  imat_data.h  imat_make.h
Math/interface/quaternion/: iquat_array.h  iquat_calc.h  iquat_data.h  iquat_make.h
Math/interface/shared/: iarray.h
Math/interface/vector/: ivec_array.h  ivec_calc.h  ivec_data.h
Math/type/: basic.h  mat.h  mat_fwd.h  quat.h  traits.h  vec.h
XXdEngine/: XXd.hpp
XXdEngine/Core/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp
XXdEngine/Engine/: XXd.h
XXdEngine/Engine/Core/: .Application.cpp.swp  Application.cpp  Application.h  Application.hpp  Core.hpp  Delegate.h  EntryPoint.h  EntryPoint.hpp  Input.h  Singleton.h  Window.cpp  Window.h  Window.hpp
XXdEngine/Engine/Event/: Delegate.h  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp
XXdEngine/Engine/Input/: KeyCode.h
XXdEngine/Engine/Log/: Logger.cpp  Logger.h  (+1 more)
XXdEngine/Event/: .AppEvent.hpp.swp  .Event.hpp.swp  .KeyEvent.hpp.swp  AppEvent.hpp  Event.hpp  MouseEvent.hpp
XXdEngine/Log/: Logger.cpp  Logger.hpp
XXdSandBox/: .main.cpp.swp  SandBox.cpp  main.cpp
cmake/: cmake_uninstall.cmake.in  ktm-config.cmake.in
ktm/: ktm.h  ktm_operator.h  setup.h  type_quat.h  type_vec.h
ktm/Acsi/: Acsi.h  AcsiIntrin.h  AcsiNeon.h  SetupAcsi.h
ktm/Basic/: Basic.h  SetupBasic.h
ktm/detail/: loop_util.h
ktm/function/: arithmetic.h  common.h  compare.h  complex.h  epsilon.h  exponential.h  geometric.h  matrix.h  matrix_decompose.h  matrix_equation.h  matrix_transform2d.h  matrix_transform3d.h  matrix_transform_2d.h  quaternion.h  random.h  transform_2d.h  transform_3d.h  trigonometric.h  vector.h  vector_arithmetic.h  vector_exponential.h
ktm/ksimd/: arch_type.h  arm_ext.h  arm_intrin.h  intel_ext.h  intel_intrin.h  intrin.h  intrin_api.h  skv.h  skv_ext.h
ktm/simd/: arch_def.h  arm.h  arm_intrin.h  intel_intrin.h  intrin.h  intrin_api.h  neon.h  skv.h  wasm_intrin.h  x86.h  x86_intrin.h
ktm/traits/: type_matrix_component.h  type_single_extend.h  type_single_extends.h  type_traits_ext.h  type_traits_math.h
ktm/type/: affine2d.h  affine3d.h  basic.h  comp.h  mat.h  mat_fwd.h  quat.h  quat_fwd.h  traits.h  vec.h  vec_fwd.h
src/: ktm.cpp
test/: CMakeLists.txt  affine2d_test.cpp  affine3d_test.cpp  common_test.cpp  complex_test.cpp  complex_text.cpp  decompose_test.cpp  geometry_test.cpp  ktm_test.h  matrix_test.cpp  quaternion_test.cpp  vector_test.cpp
(+181 files in other folders)
