enable_testing()

add_executable(geometry_test geometry_test.cpp) 
add_executable(matrix_test matrix_test.cpp) 
add_executable(quaternion_test quaternion_test.cpp) 
add_executable(vector_test vector_test.cpp)
add_executable(complex_text complex_text.cpp)

if(KTM_BUILD_WASM)
    find_program(NODE node)
    add_test(geometry_test ${NODE} geometry_test.js)
    add_test(matrix_test ${NODE} matrix_test.js)
    add_test(quaternion_test ${NODE} quaternion_test.js)
    add_test(vector_test ${NODE} vector_test.js) 
    add_test(complex_text ${NODE} complex_text.js) 
else()
    add_test(geometry_test geometry_test)
    add_test(matrix_test matrix_test)
    add_test(quaternion_test quaternion_test)
    add_test(vector_test vector_test)
    add_test(complex_text complex_text)
endif()