enable_testing()

add_executable(geometry_test geometry_test.cpp) 
add_executable(matrix_test matrix_test.cpp) 
add_executable(quaternion_test quaternion_test.cpp) 
add_executable(vector_test vector_test.cpp)
add_executable(complex_test complex_test.cpp)
add_executable(affine2d_test affine2d_test.cpp)
add_executable(affine3d_test affine3d_test.cpp)

if(KTM_BUILD_WASM)
    find_program(NODE node)
    add_test(geometry_test ${NODE} geometry_test.js)
    add_test(matrix_test ${NODE} matrix_test.js)
    add_test(quaternion_test ${NODE} quaternion_test.js)
    add_test(vector_test ${NODE} vector_test.js) 
    add_test(complex_test ${NODE} complex_test.js) 
    add_test(affine2d_test ${NODE} affine2d_test.js)  
    add_test(affine3d_test ${NODE} affine3d_test.js)  
else()
    add_test(geometry_test geometry_test)
    add_test(matrix_test matrix_test)
    add_test(quaternion_test quaternion_test)
    add_test(vector_test vector_test)
    add_test(complex_test complex_test)
    add_test(affine2d_test affine2d_test) 
    add_test(affine3d_test affine3d_test)  
endif()