enable_testing()

find_program(NODE node)
file(GLOB KTM_TEST_CPP_FILES *.cpp)

foreach(KTM_TEST_CPP_FILE ${KTM_TEST_CPP_FILES})
    get_filename_component(TEST_NAME ${KTM_TEST_CPP_FILE} NAME_WE)
    add_executable(${TEST_NAME} ${KTM_TEST_CPP_FILE})
    if(KTM_BUILD_WASM)
        find_program(NODE node)
        add_test(${TEST_NAME} ${NODE} ${TEST_NAME}.js)
    else()
        add_test(${TEST_NAME} ${TEST_NAME})
    endif()
endforeach()